# breaking-books

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  breaking-books.service  fly.toml  packages.txt  process_book_section.py  pyproject.toml
prompts/: card_creation.py
src/: api_cache.py  book_to_cards.py  cache_cli.py  card_template.html  card_template_simple.html  clean_epub.py  constants.py  main.py  old_card_viewer.py  pdf_combiner.py  process_cards.py  remove_footnotes.lua  simple_web.py  web.py  wip_web.py
src/breaking_books/: __init__.py
src/prompts/: card_creation.py
src/templates/: card_template.html  key_passages_template.html  section_card_template.html  toc_template.html
tests/: test_book_to_cards.py  test_clean_epub.py
tests/fixtures/: book.epub  meditations.epub  meditations.html
