[project]
name = "breaking-books"
version = "0.1.0"
description = "Breaking Books Project"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Diego Dorn" },
    { name = "Alexandre Variengien" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
