[project]
name = "breaking-books"
version = "0.1.0"
description = "Breaking Books Project"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Diego Dorn" },
    { name = "Alexandre Variengien" },
]
dependencies = [
    "jinja2>=3.1.6",
    "litellm>=1.70.2",
    "typer>=0.15.4",
    "weasyprint>=65.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]
